[gd_scene load_steps=2 format=3 uid="uid://ppe2c2evi3yw"]

[ext_resource type="Script" uid="uid://br2v3ndtpixug" path="res://Scripts/test_room.gd" id="1_nqjuk"]

[node name="TestRoom" type="Node2D"]
script = ExtResource("1_nqjuk")

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Increase Sync"

[node name="Button2" type="Button" parent="."]
offset_left = 1.0
offset_top = 33.0
offset_right = 121.0
offset_bottom = 64.0
text = "Use King's Will"

[node name="Button3" type="Button" parent="."]
offset_left = 1.0
offset_top = 67.0
offset_right = 103.0
offset_bottom = 98.0
text = "Начать бой"

[node name="Button4" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_battle_button_pressed"]
